--- a/kapur_300341912_lab7.html
+++ b/kapur_300341912_lab7.html
@@ -1,7 +1,7 @@
 <html>  
   
 <head>  
-    <link rel="stylesheet" href="D:\html coding\kapur_300341912_lab7\css\calculate.css">
+    <link rel="stylesheet" href="css\calculate.css">
   
 <title>Calculator</title>    
   
